http://www.mediawiki.org/wiki/Extension:Semantic_Maps/Version_history#Semantic_Maps_change_log


=== Semantic Maps 0.7.1 ===
(2010-10-20)

==== New features ====

* Image layers for OpenLayers maps, defined via pages in the Layer namespace.

==== Bug fixes ====

* Support for images without namespace prefix in the statispoints parameter in map ask queries.

=== Semantic Maps 0.7 ===
(2010-10-15)

==== New features ====

* Added 'locations' parameter to the map query printers that allows for displaying static locations
  in addition to query results in queries. It behaves the same as the locations parameter in display_points.

==== Bug fixes ====

* Fixed compatibility with the MW 1.17 resource loader.

==== Internal improvements ====

* Use of Validator 0.4, allowing for more robust and consistent error reporting.

* Restructured the directory structure of the extension to better match it's architecture.

=== Semantic Maps 0.6.6 ===
(2010-08-26)

=== New features ===

* Added support for 'semantic' extension type, added by SMW 1.5.2 and above.

==== Refactoring ====

* Use of the new MapsMappingServices class of the Maps extension instead of the globals.

==== Bug fixes ====

* Fixed issue that caused popup contents to be displayed incorrectly when using templates.

* Fixed issue that lowercased template names provided with the template parameter in queries. 

=== Semantic Maps 0.6.5 ===
(2010-07-27)

==== New features ====

* Added hook for default result formats based on queried data types (requires SMW 1.5.2 or above).

==== Refactoring ====

* Moved map id creation to the mapping service class for all features.

* Moved marker js creation for query printers to the mapping service class for all features.

* Moved default zoom level access method to the mapping service class for all features.

* Cleaned up the way specific parameter info is handled.

* Improved the structure of the geocoding functionality in form inputs.

==== Bug fixes ====
